# DeepLearningLaboration

./: .gitignore  README.md  grapher.py  graphs.ipynb  laboration.ipynb  pyproject.toml  tester.py  torch_trainer.py  trainer.ipynb  utils.py
from_lecturer/: assignment_pm.ipynb
logs/: modelstats_09-12.csv  modelstats_10-12.csv  modelstats_11-12.csv  modelstats_12-12.csv
logs/jax/: modelstats_18-12.csv  modelstats_19-12.csv  modelstats_20-12.csv
logs/keras/: modelstats_08-12.csv  modelstats_11-12.csv
logs/torch/: modelstats_16-12.csv  modelstats_17-12-1.csv  (+2 more)
saved_videos/: rl-video-episode-8000.meta.json  rl-video-episode-9100.meta.json
trainers/: jax_trainer.py  keras_trainer.ipynb  keras_trainer.py  pytorch_trainer.py  torch_trainer.py
videos/: rl-video-episode-100.meta.json  rl-video-episode-1000.meta.json  rl-video-episode-1100.meta.json  rl-video-episode-1200.meta.json  rl-video-episode-1300.meta.json  rl-video-episode-1400.meta.json  rl-video-episode-1500.meta.json  rl-video-episode-1600.meta.json  rl-video-episode-1700.meta.json  rl-video-episode-1800.meta.json  rl-video-episode-1900.meta.json  rl-video-episode-200.meta.json  rl-video-episode-2000.meta.json  rl-video-episode-2100.meta.json  rl-video-episode-2200.meta.json  rl-video-episode-2300.meta.json  rl-video-episode-2400.meta.json  rl-video-episode-2500.meta.json  rl-video-episode-300.meta.json  rl-video-episode-400.meta.json  rl-video-episode-500.meta.json  rl-video-episode-600.meta.json  rl-video-episode-700.meta.json  rl-video-episode-800.meta.json  rl-video-episode-900.meta.json
(+7 files in other folders)
