[project]
name = "deeplearninglaboration"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ale-py>=0.10.1",
    "gymnasium==0.29.1",
    "ipykernel>=6.29.5",
    "ipython>=8.30.0",
    "jax>=0.4.37",
    "keras>=3.7.0",
    "moviepy>=2.1.1",
    "numpy==1.26.4",
    "opencv-python>=4.10.0.84",
    "plotly>=5.24.1",
    "tensorflow-cpu>=2.18.0",
    "tensorflow>=2.18.0",
    "torch==2.5.1+cu124",
    "pandas==2.2.3",
]
